# VSA-cuda

./: .gitignore  VSA_cuda.py  VSA_pytorch.py  VSA_taichi.py  test.py  vsa.py
vsa/: CMakeLists.txt  VSAttn.cpp  test.cpp
vsa/include/: VSAttn.h  VSAttn_gpu_kernel.cuh  VSAttn_kernel.cuh  VSAttn_kernel_cudnn.cuh
vsa/kernel/: VSAttn_kernel.cu  VSAttn_kernel_cudnn.cu
